--- a/Checkpoint5/src/main/resources/static/index.html
+++ b/Checkpoint5/src/main/resources/static/index.html
@@ -66,7 +66,7 @@
             }
     
             function saveClicked(){
-                console.log("Save");
+                console.log("Save");a
                 
                 let id = document.getElementById("paintingId").value;
                 let name = document.getElementById("name").value;
